MODIFY: 배치 작업 관련 수정